--- a/RankCheck/app/src/main/res/values/strings.xml
+++ b/RankCheck/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RankCheck</string>
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
 </resources>
