--- a/RankCheck/app/src/main/res/values/strings.xml
+++ b/RankCheck/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RankCheck</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
