--- a/RankCheck/app/src/main/res/values/strings.xml
+++ b/RankCheck/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_home_page">Hello Home Page</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
